--- a/style/style.css
+++ b/style/style.css
@@ -322,6 +322,18 @@ body {
 	font-weight:  bold;
 	outline: none;
 }
+.link_back_ENG {
+	width: 13%;
+	border: 0px;
+	background: #F8F8F8;
+	border-radius: 30px;
+	text-align: center;
+    padding: 24px;
+    cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
+	font-weight:  bold;
+	outline: none;
+}
 .link_back button {
 	/*outline: none;
 	border: 0px;
@@ -365,7 +377,7 @@ body {
 	width: 635px;
     height: 114px;
     border-radius: 20px;
-    margin: 20px 0 0 0;
+    margin: 20px 20px 0 0;
     border: 0px;
     background: #F8F8F8;
     font-family: 'Montserrat', sans-serif;
@@ -381,7 +393,7 @@ body {
 .btn_form_back {
 	width: 150px;
     height: 37px;
-    background: #000;
+    /*background: #000;*/
     border-radius: 30px;
     text-align: center;
     padding: 17px 0 0 0;
@@ -390,12 +402,25 @@ body {
     top: 19px;
     cursor: pointer;
 }
-.btn_form_back a {
-	text-decoration: none;
+.btn_form_back button {
+	width: 157px;
+	height: 46px;
+	background: #000;
 	color: #fff;
+	font-family: 'Montserrat', sans-serif;
+	font-weight:  bold;
+	border: 0px;
+	 border-radius: 30px;
+	 outline: none;
+	 cursor: pointer;	
 }
+
+
 .input.error{
 	box-shadow: 0 0 10px indianred;
+}
+.input {
+	outline: none;
 }
 /*contact*/
 
