--- a/@media.css
+++ b/@media.css
@@ -62,6 +62,7 @@ and (max-device-width: 1024px) {
 	}
 	.mb_logo img {
 		width: 59%;
+		height: 450px;
 	}
 	.main_logo {
 		display: flex;
@@ -70,6 +71,7 @@ and (max-device-width: 1024px) {
 	.main_logo img {
 		width: 62%;
     	margin-top: 15%;
+    	height: 150px;
 	}
 	.call_back {
 		display: flex;
@@ -168,6 +170,7 @@ and (max-device-width: 1024px) {
 	}
 	.btn_up img {
 		width: 20%;
+		height: 333px;
 	}
 	.reviews_title {
 		font-size: 100px;
