--- a/@media.css
+++ b/@media.css
@@ -147,7 +147,7 @@ and (max-device-width: 1024px) {
 	    margin: -10px 0 56px 0;
 	    font-size: 200px;
 	    height: 80px;
-	    /*border-bottom: 1px solid #000;*/
+	    border-bottom: 1px solid #fff;
 	}
 	.info_about_yacht {
 		display: grid;
