--- a/@media.css
+++ b/@media.css
@@ -90,7 +90,7 @@ and (max-device-width: 1024px) {
 	.btn_back {
 		width: 40%;
 	    height: 150px;
-	    background: #000;
+	    background: #012A33;
 	    border-radius: 52px;
 	    border-color: #000;
 	    margin-top: 3%;
