--- a/@media.css
+++ b/@media.css
@@ -169,7 +169,7 @@ and (max-device-width: 1024px) {
 	.btn_call {
 	    width: 1200px;
 	    height: 300px;
-	    background: #000;
+	    background: #012A33;
 	    border-radius: 150px;
 	    text-align: center;
 	    padding: 17px 0 0 0;
