--- a/style/style.css
+++ b/style/style.css
@@ -22,10 +22,11 @@ body {
   }
 
 .header {
-    background: url(../img/BGImage.png) center no-repeat;
+    /* background: url(../img/BGImage.png) center no-repeat; */
     background-size: cover;
     text-align: center;
     width: 100%;
+    position: relative;
 }
 .heaeder_logo {
     padding: 1% 0 3% 0;
@@ -92,18 +93,27 @@ body {
     color: #fff;
     font-weight: 200;
     border-radius: 5px;
-    transition: .5s;
+    transition: 1.5s;
 }
 .header_btn_contact button:hover {
     background: #133465;
     border: #133465;
-    transition: .5s;
+    transition: 1.5s;
+    border-radius: 5px;
+    opacity: .8;
 }
 .header_btn_contact {
     padding: 2% 0;
+   
 }
 .header_btn_contact button {
     cursor: pointer;
+}
+.video_media {
+    top: 0;
+    position: absolute;
+    z-index: -1;
+    left: 0;
 }
 
 /* 2 section */
@@ -650,6 +660,7 @@ body {
                 }
                 .header_menu {
                     padding-right: 5%;
+                    width: 57%;
                 }
                 .lang_burger::before {
                     left: 34px;
@@ -676,6 +687,28 @@ body {
                 .open_menu {
                     display: none;
                 }
+                .header_btn_contact {
+                    position: relative;
+                    top: -88px;
+                }
+                .header_title h1 {
+                    font-size: 110px;
+                }
+                .nav_lang {
+                    padding: 1% 1.9% 1% 1%;
+                }
+                .nav_lang p {
+                    font-size: 18px;
+                }
+                .form_input input {
+                    border: 1px solid #000;
+                }
+                .form_input button {
+                    width: 22.67%;
+                    border-radius: 5px;
+                    padding: 2.155% 0;
+                }
+                
               }
 
 
@@ -914,11 +947,18 @@ body {
                         font-size: 14px;
                         line-height: 30px;
                     }
+                    .header_btn_contact {
+                        position: relative;
+                        top: -88px;
+                    }
                 }
 
                 @media screen 
                 and (min-device-width: 280px)
                 and (max-device-width: 414px) {
+                    .video_media {
+                        display: none;
+                    }
                     .header_title h1  {
                         font-size: 58px;
                     }
@@ -938,6 +978,8 @@ body {
                     .header {
                         width: 103%;
                         height: 100vh;
+                        background: url(../img/BGImage_mb.png.png) center no-repeat;
+                        background-size: cover;
                     }
                     .heaeder_logo img {
                         width: 48%;
